jenkins-k8s/deployment-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    release: my-jenkins
  name: my-jenkins
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: my-jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        app: my-jenkins
        release: my-jenkins
    spec:
      containers:
      - args:
        - --argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)
        - --argumentsRealm.roles.$(ADMIN_USER)=admin
        image: jenkins/jenkins:lts
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 12
          httpGet:
            path: /login
            port: http
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: my-jenkins
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 50000
          name: slavelistener
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 50m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        #- mountPath: /var/jenkins_config
        #  name: jenkins-config
        #  readOnly: true
        #- mountPath: /usr/share/jenkins/ref/plugins/
        #  name: plugin-dir
        #- mountPath: /usr/share/jenkins/ref/secrets/
        #  name: secrets-dir
      dnsPolicy: ClusterFirst
      #initContainers:
      #- command:
      #  - sh
      #  - /var/jenkins_config/apply_config.sh
      #  image: jenkins/jenkins:lts
      #  imagePullPolicy: Always
      #  name: copy-default-config
      #  resources:
      #    limits:
      #      cpu: "2"
      #      memory: 2Gi
      #    requests:
      #      cpu: 50m
      #      memory: 256Mi
      #  terminationMessagePath: /dev/termination-log
      #  terminationMessagePolicy: File
      #  volumeMounts:
      #  - mountPath: /var/jenkins_home
      #    name: jenkins-home
      #  - mountPath: /var/jenkins_config
      #    name: jenkins-config
      #  - mountPath: /var/jenkins_plugins
      #    name: plugin-dir
      #  - mountPath: /usr/share/jenkins/ref/secrets/
      #    name: secrets-dir
      #restartPolicy: Always
      #schedulerName: default-scheduler
      #securityContext:
      #  runAsUser: 0
      #serviceAccount: default
      serviceAccountName: default
      #terminationGracePeriodSeconds: 30
      volumes:
      #- configMap:
      #    defaultMode: 420
      #    name: my-jenkins
      #  name: jenkins-config
      #- emptyDir: {}
      #  name: plugin-dir
      #- emptyDir: {}
      #  name: secrets-dir
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkinshome
