jenkins-k8s/agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-jenkins
  name: jenkins-agent
  namespace: default
spec:
  ports:
  - name: slavelistener
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: my-jenkins
  sessionAffinity: None
  type: ClusterIP
