jenkins-k8s/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: default
spec:
  rules:
  - host: jenkins.freidenker.tech
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
